# NixBench

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md
apps/gtkmenubridge/: gtkmenu_bridge.c
apps/html/nixclock/: clock.css  clock.js  index.html
apps/nixclock/: nixclock.c  nixclock_ui.c  nixclock_ui.h
apps/x11probe/: x11probe.c
docs/: architecture.md  arm64-xwayland.md  building.md  framebuffer-harness.md  html-themes.md  privilege-boundary.md  project-status.md  standalone-backend.md  standalone-session.md
examples/: wayland_demo.c  wayland_demo_ui.c  wayland_demo_ui.h
packaging/pkgsrc/localpatches/wayland/xwayland/: patch-netbsd-memfd-fallocate
packaging/pkgsrc/xwayland/: README.md
patches/pkgsrc/: README.md  xfce4-thunar-optional-panel-plugins.patch
patches/xwayland-24.1.12/: 0001-composite-mark-parent-before-validating-late-redirect.patch  0002-xwayland-shm-fallback-when-posix-fallocate-is-unsupported.patch  0003-xwayland-register-damage-for-late-surface.patch  README.md
protocols/: nixbench-application-menu-v1.xml  nixbench-html-theme-v1.xml
src/: application.c  application.h  backdrop_renderer.c  backdrop_renderer.h  backend_probe.c  backend_probe.h  backend_probe_drm.c  backend_probe_drm_internal.h  backend_probe_main.c  damage_region.c  damage_region.h  desktop.c  desktop.h  desktop_preview.c  desktop_preview.h  desktop_renderer.c  desktop_renderer.h  desktop_runtime.c  desktop_runtime.h  file_browser.c  file_browser.h  filesystem.c  filesystem.h  framebuffer_format.c  framebuffer_format.h  framebuffer_shadow.c  framebuffer_shadow.h  host.c  host.h  host_backend.h  host_fd_wait.c  host_fd_wait.h  host_headless.c  host_headless.h  host_privsep_client.c  host_privsep_client.h  host_sdl.c  host_sdl.h  host_wsdisplay.c  host_wsdisplay.h  (+83 more)
tests/: application_test.c  backend_probe_drm_test.c  backend_probe_test.c  damage_region_test.c  desktop_preview_test.c  desktop_runtime_test.c  desktop_test.c  filesystem_test.c  framebuffer_format_test.c  framebuffer_shadow_test.c  gtk_menu_bridge_env_test.sh  host_fd_wait_test.c  host_sdl_test.c  host_test.c  host_wsdisplay_test.c  menu_test.c  nixclock_ui_test.c  nixinfo_system_test.c  nixinfo_test.c  png_loader_test.c  privsep_helper_test.c  privsep_protocol_test.c  renderer_test.c  screenshot_test.c  session_console_shortcuts_test.c  session_core_test.c  session_credentials_test.c  session_emergency_chord_test.c  session_frame_pacing_test.c  session_runtime_sentinel_test.c  session_test_application.c  session_watchdog_test.c  shell_test.c  software_canvas_test.c  theme_atlas_test.c  theme_bundle_test.c  user_config_test.c  wayland_demo_ui_test.c  wayland_test.c  window_test.c  (+8 more)
themes/BeOS/: desktop.html  menubar.html  theme.conf  theme.css  window.html
themes/CDE/: desktop.html  menubar.html  theme.conf  theme.css  window.html
themes/Fantasy/: desktop.html  menubar.html  theme.conf  theme.css  window.html
themes/Fantasy/assets/: README.md
themes/Motif/: desktop.html  menubar.html  theme.conf  theme.css  window.html
tools/: gtk-menu-bridge-env.sh  nixbench-session.in  run-clean-env.sh  run-midori-content-probe.sh  run-midori-gdb.sh  run-sakura-probe.sh  run-wsdisplay-session.sh  run-wsdisplay-smoke.sh  run-xwayland-probe.sh  run-xwayland-rootless-probe.sh
